# sorta

./: .devenv.flake.nix  .gitignore  concepts.md  default.nix  devenv.nix  flake.nix
sorta/: .gitignore  default.nix  flake.nix  parseProperty.md  sorta.cabal
sorta/app/: Main.hs
sorta/data/: ESP32 Emulation with QEMU [lZp9L7Ij4Yo].en.srt  Everything You Need To Start Writing Lua [CuWfgiwI73Q].en.srt  Exploring Verse, Haskell, Language Design and Teaching (with Simon Peyton Jones) [UBgam9XUHs0].en.srt  Homelab 0x1 - Proxmox VM using Terraform and Nix [sYVScdeixGs].en.srt  How to Setup The Tailscale VPN and Routing on pfsense [P-q-8R67OPY].en.srt  How to use cloud-init and Tailscale ｜ Infrastructure as Code Series Part 1 [e-X5FJwrkaA].en.srt  IOHK ｜ Domen Kožar, Lead DevOps, Nix workshop. [BjRGlKNHeEc].en.srt  Libvirt ｜ virsh console [UTnAvH3WWlM].en.srt  Lua Tutorial [iMacxZQMPXs].en.srt  Nix, The Build Everything Language (with Julian Arni) [maw2hptpErI].en.srt  NixCon2023 disko and nixos-anywhere： Declarative and Remote Installation of NixOS [U_UwzMhixr8].en.srt  OpenAI’s new image generator hits different... [Bt-7YiNBvLE].en.srt  RIO, a standard library for Haskell [gu0ZCqQe3BY].en.srt  Richard A. Eisenberg - A Type-ical Case Study： The Sound Type-indexed Type Checker (HaskellX 2019) [lsGHa-pdCCs].en.srt  Terraform + NixOS =UAQZ0rALo5c].en.srt  Testing TVs At Scale With Elixir (with Dave Lucia) [_MwXbHADT-A].en.srt
sorta/src/: Params.hs  Parser.hs  Types.hs
sorta/test/: Main.hs  TestSampleFiles.hs  TestSubtitle.hs  TestTimeStamp.hs  TestTimerange.hs  TestTimestamp.hs  Util.hs
