cabal-version: 3.0
name:          sorta
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    OverloadedStrings

  build-depends:
    , attoparsec
    , base                  ^>=4.19.0.0
    , checkers
    , directory
    , filepath
    , fmt
    , optparse-applicative
    , QuickCheck
    , quickcheck-instances
    , subtitleParser
    , text
    , time
    , trifecta

library
  import:          warnings
  exposed-modules:
    Params
    Parser
    Types

  hs-source-dirs:  src

executable sorta
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , sorta
    , transformers

test-suite tests
  import:         warnings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    TestSampleFiles
    TestSubtitle
    TestTimerange
    TestTimestamp
    Util

  build-depends:
    , raw-strings-qq
    , sorta
    , tasty
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck
